--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: Telegram Auto Bot
 on:
-  schedule:
-    - cron: '0 */4 * * *'
   workflow_dispatch:
 
 jobs:
@@ -11,5 +9,5 @@ jobs:
       - name: Send Message
         run: |
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
-          -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-          -d text="🚀 Automate your business with AI! Get the kit here: https://girisbhut.gumroad.com/l/sgdoet"
+          -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+          -d text="✅ नमस्ते! आपकी ऑटोमैटिक मशीन अब सफलतापूर्वक कनेक्ट हो गई है।"
