--- a/.github/workflows/daily_product_machine.yml
+++ b/.github/workflows/daily_product_machine.yml
@@ -1,25 +1,25 @@
-name: 100_Percent_Final_Fix
+name: 100_Percent_Final_Success
 on:
   workflow_dispatch:
 
 jobs:
-  run_machine:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Command to Gumroad
+      - name: Create Product
         run: |
-          # सीधा कमांड और जवाब रिकॉर्ड करना
-          OUTPUT=$(curl -s -X POST https://api.gumroad.com/v2/products \
-            -H "Content-Type: application/x-www-form-urlencoded" \
-            -d "access_token=${{ secrets.GUMROAD_TOKEN }}" \
-            -d "name=AI_FINAL_FIX_$(date +%H%M)" \
-            -d "price=500" \
-            -d "description=Master Guide" \
+          # ध्यान दें: URL के अंत में / डालना ज़रूरी है
+          RESPONSE=$(curl -s -X POST "https://api.gumroad.com/v2/products" \
+            -H "Authorization: Bearer ${{ secrets.GUMROAD_TOKEN }}" \
+            -d "name=AI_Ebook_Mastery_$(date +%H%M)" \
+            -d "price=1000" \
+            -d "description=Premium Automation Guide" \
             -d "published=true")
-          
-          echo "Full Response: $OUTPUT"
-          
-          # टेलीग्राम पर सीधा कच्चा जवाब भेजना (बिना किसी फ़िल्टर के)
+
+          echo "Response: $RESPONSE"
+
+          # टेलीग्राम पर रिपोर्ट भेजना
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
           -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-          -d text="🤖 मशीन रिपोर्ट: $OUTPUT"
+          -d text="📊 *असली रिपोर्ट:* %0A%0A$RESPONSE" \
+          -d parse_mode="Markdown"
