--- a/.github/workflows/daily_product_machine.yml
+++ b/.github/workflows/daily_product_machine.yml
@@ -1,30 +1,33 @@
-name: Machine_Final_Success
+name: Ultimate_Final_Fix
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run_machine:
     runs-on: ubuntu-latest
     steps:
-      - name: Create Product
+      - name: Command to Gumroad
         run: |
-          # यह वही तरीका है जो आपके ब्राउज़र में चला
+          # ध्यान दें: हमने URL के आखिर में 'products' के बाद कुछ नहीं लगाया है
+          # और टोकन को Header में डाल दिया है
           RESPONSE=$(curl -s -X POST "https://api.gumroad.com/v2/products" \
-            -d "access_token=${{ secrets.GUMROAD_TOKEN }}" \
+            -H "Authorization: Bearer ${{ secrets.GUMROAD_TOKEN }}" \
+            -H "Content-Type: application/x-www-form-urlencoded" \
             -d "name=Final_Success_Product_$(date +%H%M)" \
             -d "price=1000" \
-            -d "description=Automated Success" \
+            -d "description=Master Guide" \
             -d "published=true")
-
+          
           echo "Response: $RESPONSE"
-
-          # टेलीग्राम पर सीधा संदेश
-          if [[ $RESPONSE == *"\"success\":true"* ]]; then
-             MSG="✅ मुबारक हो! मशीन ने गमरोड के अंदर घुसकर प्रोडक्ट बना दिया है।"
+          
+          # टेलीग्राम पर मैसेज भेजना (बिना कचरे के)
+          if [[ $RESPONSE == *"success\":true"* ]]; then
+            MSG="✅ जीत गए! प्रोडक्ट लाइव है।"
           else
-             MSG="📊 गमरोड का जवाब: $RESPONSE"
+            # अगर 404 आए तो यह साफ़ बताएगा
+            MSG="❌ गमरोड ने फिर मना किया। जवाब का छोटा हिस्सा: $(echo $RESPONSE | head -c 50)"
           fi
 
-          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" \
-          -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
+          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
+          -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
           -d text="$MSG"
